fixed spacing

--- a/docroot/themes/custom/cu2017/css/style.css
+++ b/docroot/themes/custom/cu2017/css/style.css
@@ -11326,36 +11326,37 @@ header .mega_menu_internal_main_nav .header_nav_section li a.active {
   margin: 0;
 }
 
-/* line 11, ../sass/custom/_mainnav.scss */
+/* line 10, ../sass/custom/_mainnav.scss */
+nav#block-mainnavigation {
+  margin-top: 22px;
+}
+
+/* line 13, ../sass/custom/_mainnav.scss */
 .main_nav {
   padding-left: 0;
 }
-/* line 13, ../sass/custom/_mainnav.scss */
-.main_nav:first-child {
-  padding-top: 18px;
-}
-/* line 16, ../sass/custom/_mainnav.scss */
+/* line 15, ../sass/custom/_mainnav.scss */
 .main_nav .child_menu {
   border-left: 2px solid #019cdb;
   margin-left: 12px;
 }
-/* line 21, ../sass/custom/_mainnav.scss */
+/* line 20, ../sass/custom/_mainnav.scss */
 .main_nav .child_menu .active::before {
   content: "•";
   color: #FFA300;
   font-size: 16px;
   padding-right: 4px;
 }
-/* line 29, ../sass/custom/_mainnav.scss */
+/* line 28, ../sass/custom/_mainnav.scss */
 .main_nav .grandchild_menu {
-  margin-left: 10px;
+  margin-left: 20px;
 }
-/* line 31, ../sass/custom/_mainnav.scss */
+/* line 30, ../sass/custom/_mainnav.scss */
 .main_nav .grandchild_menu li ul {
-  margin-left: 10px;
+  margin-left: 20px;
   font-size: 16px;
 }
-/* line 37, ../sass/custom/_mainnav.scss */
+/* line 36, ../sass/custom/_mainnav.scss */
 .main_nav li {
   display: block;
   line-height: 1;
@@ -11363,30 +11364,30 @@ header .mega_menu_internal_main_nav .header_nav_section li a.active {
   list-style-type: none;
   margin-left: 0;
 }
-/* line 44, ../sass/custom/_mainnav.scss */
+/* line 43, ../sass/custom/_mainnav.scss */
 .main_nav li a {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
   color: #002E6D;
   line-height: 28px;
   margin-left: 0;
-  padding: 6px 4px 6px 10px;
+  padding: 0 0 0 10px;
   text-decoration: none;
+  display: block;
 }
-/* line 53, ../sass/custom/_mainnav.scss */
+/* line 54, ../sass/custom/_mainnav.scss */
 .main_nav li a:hover {
   background: #EFEFEF;
   text-decoration: none;
   width: 100%;
 }
-/* line 57, ../sass/custom/_mainnav.scss */
+/* line 58, ../sass/custom/_mainnav.scss */
 .main_nav li a.active {
   font-weight: 700;
 }
-/* line 61, ../sass/custom/_mainnav.scss */
+/* line 62, ../sass/custom/_mainnav.scss */
 .main_nav li a.child_menu_item {
   color: #002E6D;
-  margin: 4px 0;
 }
 /* line 65, ../sass/custom/_mainnav.scss */
 .main_nav li a.child_menu_item.active {
@@ -11397,7 +11398,6 @@ header .mega_menu_internal_main_nav .header_nav_section li a.active {
   border-bottom: 0;
   color: #002E6D;
   font-size: 16px;
-  padding: 5px 4px 5px 10px;
 }
 /* line 76, ../sass/custom/_mainnav.scss */
 .main_nav li a.grandchild_menu_item.active {
